<resources>
    <string name="app_name">AnonApp</string>

    <string-array name="tab_array">
        <item>User</item>
        <item>Posts</item>
        <item>Options</item>
    </string-array>

    <!-- general use strings -->
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="retry">Retry</string>
    <string name="quit">Quit</string>
    <string name="next">Next</string>
    <string name="submit">Submit</string>
    <string name="comment">Comment</string>
    <string name="back">Back</string>
    <string name="Filter">FILTER</string>
    <!-- error strings -->
    <string name="friendly_error">Uh-oh!</string>
    <string name="timeout">Could not find server, do you have internet?</string>
    <string name="post_cooldown">You\'re posting too fast! please wait a minute</string>
    <string name="post_requirements">Title must not be blank</string>
    <string name="ohMyGodThisShouldntHappen">Authentication Failure, please restart</string>
    <string name="Oops">Oops our bad, try again later</string>
    <string name="voteTwice">You can\'t vote the same way twice!</string>
    <!-- Tutorial Text-->
    <string name="TutorialTitle">Welcome to Anon!</string>
    <string name="TutorialText1">This tutorial will get you up to speed with the app</string>
    <string name="TutorialText2">Are you sure? Tutorial can be restarted from options menu</string>
    <string name="TutorialText3">The left tab lets you see your user page</string>
    <string name="TutorialText4">The user page shows your posts, comments and user score </string>
    <string name="TutorialText5">The right tab lets you see the options menu</string>
    <string name="TutorialText6">The options menu allows you to change settings and show the tutorial again</string>
    <string name="TutorialText7">The page you are on shows everyones posts</string>
    <!--Options Menu Tex -->
    <string name="showTutorial">Show Tutorial</string>
    <string name="changeLanguage">Change Language</string>
    <string name="deleteAcconut">Delete Account?</string>
    <!--user input hints -->
    <string name="PostTitleHint">Post Title...</string>
    <string name="PostTextHint">Post Text...</string>
    <string name="CommentHint">Reply...</string>
    <!--deletion -->
    <string name="deletePost">Delete Post?</string>
    <string name="deleteComment">Delete Comment?</string>
    <string name="notYours">Not your post</string>
    <string name="deleted">deleted</string>
    <!--Languages -->
    <string-array name="language_array">
        <item>English</item>
        <item>Polish</item>

    </string-array>

</resources>
