<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:id="@+id/activity_options"
    >


    <Button
        android:text="@string/showTutorial"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/tutorial_button" />

    <Button
        android:text="@string/deleteAcconut"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/deleteAcc" />

    <TextView
        android:text="@string/changeLanguage"
        android:textSize="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textView1" />

    <Spinner
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/languageSelect" />
</LinearLayout>
