<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"

    android:background="@drawable/curved_popup"
    android:fadingEdge="horizontal|vertical"
    android:fadingEdgeLength="5dp">


    <EditText
        android:inputType="text"
        android:maxLength="200"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:textSize="20sp"
        android:textAlignment="center"
        android:layout_marginTop='80dp'
        android:hint="@string/CommentHint"
        android:id="@+id/PopupEditComment" />




    <View android:id="@+id/Cdummy"
        android:layout_height="0dp"
        android:layout_width="0dp"
        android:layout_centerInParent="true"
        android:layout_marginTop="100dp"
        />

    <Button

        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:text="@string/submit"
        android:id="@+id/popupSubmitComment"
        android:layout_alignBaseline="@+id/popupBackComment"
        android:layout_alignBottom="@+id/popupBackComment"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <Button

        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:text="@string/back"
        android:id="@+id/popupBackComment"
        android:layout_below="@+id/Cdummy"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="138dp" />
</RelativeLayout>